testsuite/tests/interpreter_errors/zero_division_error/test.out
script.lkql:1:8: error: Zero division
1 | print (84 / 0)
  |        ^^^^^^ 

